[gd_scene load_steps=10 format=3 uid="uid://cuyoovh4pa1lj"]

[ext_resource type="Script" uid="uid://bqywdxd1dn0ml" path="res://scripts/pause_menu.gd" id="1_kukqi"]
[ext_resource type="Theme" uid="uid://d12u73fhyywec" path="res://themes/game_menus.tres" id="2_7l7mv"]
[ext_resource type="Texture2D" uid="uid://c1maxnscy77tl" path="res://assets/Play_default.png" id="3_7l7mv"]
[ext_resource type="Texture2D" uid="uid://ma42oeahussw" path="res://assets/Play_hover.png" id="4_v4r4p"]
[ext_resource type="Texture2D" uid="uid://5ypppiorm57m" path="res://assets/restart_default.png" id="5_1s2dm"]
[ext_resource type="Texture2D" uid="uid://c2fem6awntvno" path="res://assets/restart_hover.png" id="6_88e76"]
[ext_resource type="Texture2D" uid="uid://b8emkjw4sa44d" path="res://assets/home_default.png" id="7_88e76"]
[ext_resource type="Texture2D" uid="uid://bg5t2l8561318" path="res://assets/home_hover.png" id="8_knqa7"]
[ext_resource type="AudioStream" uid="uid://den8lclcr1gwf" path="res://assets/audio/SFX/pause.ogg" id="9_knqa7"]

[node name="PauseMenu" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kukqi")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.496528
anchor_top = 0.493056
anchor_right = 0.510417
anchor_bottom = 0.517747
offset_left = -52.0
offset_top = -47.5
offset_right = 52.0
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_7l7mv")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("2_7l7mv")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSE"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="continue" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme = ExtResource("2_7l7mv")
texture_normal = ExtResource("3_7l7mv")
texture_hover = ExtResource("4_v4r4p")
stretch_mode = 0

[node name="restart" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("5_1s2dm")
texture_hover = ExtResource("6_88e76")
stretch_mode = 0

[node name="home" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("7_88e76")
texture_hover = ExtResource("8_knqa7")
stretch_mode = 0

[node name="pause" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_knqa7")
bus = &"SFX"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/continue" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/restart" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/home" to="." method="_on_leave_button_pressed"]
